Update images and results

--- a/python/comparison.ipynb
+++ b/python/comparison.ipynb
@@ -7,8 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import merge_and_plot, merge_and_line\n",
-    "import os"
+    "from utils import merge_and_plot, merge_and_line, merge_and_line_stages, parse_size, parse_stage, calc_rpd, calc_stats\n",
+    "import os\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -40,8 +41,8 @@
     "fig = merge_and_plot(\n",
     "    folders, \n",
     "    [\"GA\", \"IG\", \"MDDR\", \"NEH\"], \n",
-    "    r\"$\\text{Algorithm}$\", \n",
-    "    r\"$\\text{RPD(%)}$\"\n",
+    "    \"Algorithm\", \n",
+    "    \"RPD (%)\"\n",
     ")\n",
     "\n",
     "fig.show()\n",
@@ -60,14 +61,34 @@
     "fig = merge_and_line(\n",
     "        folders, \n",
     "        [\"GA\", \"IG\", \"MDDR\", \"NEH\"], \n",
-    "        r\"$\\text{Number of jobs}$\", \n",
-    "        r\"$\\text{RPD(%)}$\"\n",
+    "        \"Number of jobs\", \n",
+    "        \"RPD (%)\"\n",
     "    )\n",
     "\n",
     "fig.show()\n",
     "\n",
     "if SAVE_IMAGE:\n",
     "    save_comparison_image(fig, \"2_comparison_line\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "least-winner",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = merge_and_line_stages(\n",
+    "        folders, \n",
+    "        [\"GA\", \"IG\", \"MDDR\", \"NEH\"], \n",
+    "        \"Number of stages\", \n",
+    "        \"RPD (%)\"\n",
+    "    )\n",
+    "\n",
+    "fig.show()\n",
+    "\n",
+    "if True:\n",
+    "    save_comparison_image(fig, \"2b_comparison_stages\")"
    ]
   },
   {
@@ -82,8 +103,8 @@
     "fig = merge_and_plot(\n",
     "    folders, \n",
     "    [\"GA\", \"IG\", \"NEH\"], \n",
-    "    r\"$\\text{Algorithm}$\", \n",
-    "    r\"$\\text{RPD(%)}$\"\n",
+    "    \"Algorithm\", \n",
+    "    \"RPD (%)\"\n",
     ")\n",
     "\n",
     "fig.show()\n",
@@ -102,8 +123,8 @@
     "fig = merge_and_line(\n",
     "        folders, \n",
     "        [\"GA\", \"IG\", \"NEH\"], \n",
-    "        r\"$\\text{Number of jobs}$\", \n",
-    "        r\"$\\text{RPD(%)}$\"\n",
+    "        \"Number of jobs\", \n",
+    "        \"RPD (%)\"\n",
     "    )\n",
     "\n",
     "fig.show()\n",
@@ -124,8 +145,8 @@
     "fig = merge_and_plot(\n",
     "    folders, \n",
     "    [\"GA\", \"IG\"], \n",
-    "    r\"$\\text{Algorithm}$\", \n",
-    "    r\"$\\text{RPD(%)}$\"\n",
+    "    \"Algorithm\", \n",
+    "    \"RPD (%)\"\n",
     ")\n",
     "\n",
     "fig.show()\n",
@@ -144,8 +165,8 @@
     "fig = merge_and_line(\n",
     "        folders, \n",
     "        [\"GA\", \"IG\"], \n",
-    "        r\"$\\text{Number of jobs}$\", \n",
-    "        r\"$\\text{RPD(%)}$\"\n",
+    "        \"Number of jobs\", \n",
+    "        \"RPD (%)\"\n",
     "    )\n",
     "\n",
     "fig.show()\n",
@@ -155,9 +176,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dutch-digit",
+   "metadata": {},
+   "source": [
+    "### Statistics"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6500c5a3",
+   "id": "focused-volleyball",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"../solutions/all/results.csv\", header=None, names=[\"GA\", \"IG\", \"NEH\", \"MDDR\"])\n",
+    "\n",
+    "df.index = df.index.map(lambda x: parse_size(x))\n",
+    "df.index.name = \"Size\"\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "falling-architect",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Number of best solutions, grouped by number of jobs\n",
+    "min_df = df.transform(lambda x: x == x.min(), axis=1)\n",
+    "\n",
+    "min_df.groupby(\"Size\").value_counts()\n",
+    "\n",
+    "# min_df.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "relevant-restriction",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "df.groupby(min_df.index).agg([\"mean\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "south-labor",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rpd = calc_rpd(df)\n",
+    "rpd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "conventional-immunology",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats = calc_stats(rpd)\n",
+    "stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "superb-least",
    "metadata": {},
    "outputs": [],
    "source": []
