--- a/python/rpd_scatter.ipynb
+++ b/python/rpd_scatter.ipynb
@@ -38,6 +38,41 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ffdcb6d0",
+   "metadata": {},
+   "source": [
+    "### 0. Makespan calculation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "046a3332",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folders = [\"../solutions/fifo\", \"../solutions/first_complete\"]\n",
+    "\n",
+    "fig = merge_and_plot(\n",
+    "    folders, \n",
+    "    [\"FIFO\", \"First-completion\"], \n",
+    "    \"Makespan procedure\", \n",
+    "    \"RPD (%)\"\n",
+    ")\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    xaxis_range=[-0.3,1.3],\n",
+    "    xaxis_title=None\n",
+    ")\n",
+    "\n",
+    "fig.show()\n",
+    "\n",
+    "if SAVE_IMAGE:\n",
+    "    save_scatter_image(fig, \"0_makespan\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3564c084",
    "metadata": {},
    "source": [
@@ -426,7 +461,7 @@
     "\n",
     "fig.show()\n",
     "\n",
-    "if True:\n",
+    "if SAVE_IMAGE:\n",
     "    save_scatter_image(fig, \"10b_replacement-type\")"
    ]
   },
@@ -454,8 +489,8 @@
     "\n",
     "fig.show()\n",
     "\n",
-    "if True:\n",
-    "    save_scatter_image(fig, \"10c_replacement-rate\")"
+    "if SAVE_IMAGE:\n",
+    "    save_scatter_image(fig, \"10c_replacement_rate\")"
    ]
   },
   {
